--- a/templates/Index.html
+++ b/templates/Index.html
@@ -5,13 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Ravi+Prakash&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fira+Sans+Condensed:ital,wght@1,300&family=Padauk&family=Ravi+Prakash&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
     <style>
     *{
     margin: 0;
@@ -25,7 +19,7 @@
 
 }
 .outer{
-    background-image: url(https://www.analystik.ca/blogue/wp-content/uploads/2019/03/shutterstock_121286026.jpg);
+    background-image: url(https://res.cloudinary.com/www-klusster-com/image/upload/q_85,f_auto,w_1920/v1598271993/tfnj9aeevww9akmddtya.jpg);
     background-repeat: repeat;
     background-size: cover;
     height:100vh;
@@ -41,7 +35,8 @@ header{
 .pgp{
     position:absolute;
     left: 34.5vw;
-    top: 13vh;
+    top: 14.5vh;
+    color: rgb(255, 255, 255);
     font-family: 'Fira Sans Condensed', sans-serif;
 }
 .main{
@@ -70,7 +65,7 @@ header{
     position: relative;
     left: 4vw;
     top:11vh;
-    font-size: 1.2vw;
+    font-size: 1vw;
     color: rgba(228, 0, 0, 0.774);
 }
 
