--- a/templates/NewSubmissionForm.html
+++ b/templates/NewSubmissionForm.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://semantic-ui.com/dist/semantic.min.css"
     />
-    <title>Application Form</title>
+    <title>Request Form</title>
     <style>
       /* Style inputs, select elements and textareas */
       input[type="text"],
@@ -137,7 +137,7 @@
     <div class="outer">
       <form method="POST" action="/upload" enctype="multipart/form-data">
         <div class="Appcontainer">
-          <h1 class="Appheading">Application</h1>
+          <h1 class="Appheading">Request Form</h1>
           <form action="action_page.php">
             <div class="row">
               <div class="col-25">
