--- a/templates/Resubmission.html
+++ b/templates/Resubmission.html
@@ -13,13 +13,13 @@
       href="https://semantic-ui.com/dist/semantic.min.css"
     />
 
-    <title>Application Form</title>
+    <title>Request Form</title>
   </head>
   <body>
     <div class="outer">
       <form method="POST">
         <div class="Appcontainer">
-          <h1 class="Appheading">Application</h1>
+          <h1 class="Appheading">Request Form</h1>
           <form action="action_page.php">
             <div class="row">
               <div class="col-25">
@@ -103,7 +103,8 @@
                     enctype="multipart/form-data"
                   >
                     <input type="file" id="myFile" name="filename" />
-                    <button type="submit" name='uploadFile' value='uploadFile'>Submit</button>
+                    <button type="submit" name='uploadFile' value='uploadFile' class="addcom sendFile">Send File</button>
+                    <div class="notif">⚠ Attach the file and press "send file" to upload</div>
                   </form>
                   {% else %}
                   <form method="POST" action="/download">
@@ -146,20 +147,20 @@
                       {% if previousComments != [] %} {% for comment in
                       previousComments %} {% if comment[1]==0 %}
                       <li class="shout recieve">
-                        {{comment[4]}} : {{comment[2]}}
+                        <p class="date">{{comment[4]}}</p>{{comment[2]}}
                       </li>
                       {% else %}
                       <li class="shout sent">
-                        {{comment[2]}} : {{comment[4]}}
+                        {{comment[2]}}<p class="date">{{comment[4]}}</p>
                       </li>
                       {% endif %} {% endfor %} {% endif %} {% for comment in
                       tempComments %} {% if comment[2]=='0' %}
                       <li class="shout recieve">
-                        {{comment[1]}} : {{comment[0]}}
+                        <p class="date">{{comment[1]}}</p>{{comment[0]}}
                       </li>
                       {% else %}
                       <li class="shout sent">
-                        {{comment[0]}} : {{comment[1]}}
+                        {{comment[0]}}<p class="date">{{comment[1]}}</p>
                       </li>
                       {% endif %} {% endfor %}
                     </ul>
@@ -172,7 +173,7 @@
                       placeholder="Enter Your Message"
                     />
                     <button
-                      class="ui addcom button"
+                      class="addcom"
                       type="submit"
                       name="add"
                       value="add"
