--- a/templates/SDashboard.html
+++ b/templates/SDashboard.html
@@ -8,11 +8,13 @@
     <link href={{ url_for('static', filename='css/kebabStyle.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/SdashboardStyle.css') }} rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Fira+Sans+Condensed:ital,wght@1,300&family=Padauk&family=Ravi+Prakash&family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <form method="POST">
         <header class = "Header1">
-            <h1 class="h1"><strong>Student Request Management System</strong></h1>
+            <h1 class="h1"><strong>&nbsp;&nbsp;TERRA<p class="subttl">&nbsp;Student Request Management System</p></strong></h1>
             <div class="pull-right username" id = "username"><div class="uicon"></div>{{username}}</div>
         </header>
         <ul class="navSettings">
