--- a/static/css/Application.css
+++ b/static/css/Application.css
@@ -37,7 +37,6 @@ textarea:focus{
   outline: none;
 }
 
-
 /* Style the label to display next to the inputs */
 label {
   padding: 12px 12px 12px 0;
@@ -114,10 +113,16 @@ input[type="submit"] {
   float: right;
 }
 
-.recieve{
-  display: block; 
-  text-align: left;
-  color: #800000;
+.addcom.sendFile{
+  color: rgb(105, 0, 0);
+  border-radius: .28571429rem;
+  bottom: 0;
+  right: 0;
+}
+
+.notif{
+  color: rgb(105, 0, 0);
+  padding-top: 0.3cm;
 }
 
 /* Clear floats after the columns */
@@ -126,7 +131,14 @@ input[type="submit"] {
   display: table;
   clear: both;
 }
+.cbox{
+  float: right;
+}
 
+.cboxlab{
+  position: relative;
+  bottom: 0.4cm;
+}
 .Appheading {
   position: relative;
   text-align: center;
@@ -143,20 +155,42 @@ input[type="submit"] {
 .choosefile {
   margin-top: 10px;
 }
-.cbox{
-  float: right;
-}
-
-.cboxlab{
-  position: relative;
-  bottom: 0.4cm;
-}
 
 .addcom{
   float: right;
   position: relative;
   bottom: 1.06cm;
-  right: -1.032cm;
-  height: 1.034cm;
+  right: -1.04cm;
+  height: 1.06cm;
   border: 1px solid #ccc;
+  border-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: .28571429rem;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1em;
+  outline: 0;
+  border: none;
+  vertical-align: baseline;
+  background: #e0e1e2 none;
+  color: rgba(0,0,0,.6);
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  margin: 0 .25em 0 0;
+  padding: .78571429em 1.5em .78571429em;
+  text-transform: none;
+  text-shadow: none;
+  font-weight: 700;
+  line-height: 1em;
+  font-style: normal;
+  text-align: center;
+  text-decoration: none;
+  box-shadow: 0 0 0 1px transparent inset, 0 0 0 0 rgb(34 36 38 / 15%) inset;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.addcom:hover{
+  background-color: rgb(187, 187, 187);
 }
