--- a/static/css/CommentBoxStyle.css
+++ b/static/css/CommentBoxStyle.css
@@ -2,14 +2,14 @@
 	margin: 0;
 	padding: 0;
 }
-.recive{
+.recieve{
 	display: block; 
 	text-align: left;
-	color: #800000;
+	color: #004f74;
 }
 
 .sent{
-	color:#505050
+	color:#411b02;
 }
 
 /*MAY NEED TO LOOK INTO THIS SECTION AGAIN*/
@@ -19,7 +19,6 @@
 	height: 80%;
 	background: #ffffff;
 	overflow: auto;
-	text-indent: 15px;
 	text-align: right;
 	position: relative;
 	margin: 0;
@@ -37,7 +36,7 @@
 
 .shout .date{
 	
-	color: #A9A9A9;
+	color: #858585;
 }
 
 #input{
@@ -46,8 +45,9 @@
 	margin: 0;
 	padding-bottom: 10px;
 	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-	border-top-right-radius: 4px;
   	box-sizing: border-box;
 }
 
+.date{
+	font-size: 11px;
+}
