--- a/static/css/SDashboardStyle.css
+++ b/static/css/SDashboardStyle.css
@@ -14,7 +14,7 @@ body {
 
 header {
   position: fixed;
-  background-color: #227963;
+  background-color: #227963fb;
   text-align: left;
   padding: 1px;
   padding-left: 10px;
@@ -24,19 +24,30 @@ header {
 }
 
 .h1 {
-  font-size: 22px;
-  color: white;
-  margin-bottom: 30px;
+  font-family: 'Ravi Prakash', cursive;
+  font-size: 30px;
+  color: rgb(238, 238, 238);
+  margin-bottom: 16px;
 }
 
 .username {
+  font-family: 'Indie Flower', cursive;
   position: fixed;
-  top: 0.44cm;
+  top: 0.46cm;
   right: 1.2cm;
-  font-size: 20px;
-  color: white;
+  font-size: 18px;
+  color: rgb(236, 236, 236);
 }
 
+.subttl{
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 15px;
+  position: fixed;
+  top:0.75cm;
+  left:2.8cm;
+  color: #eaffed;
+  font-weight: normal;
+}
 .uicon{
   position: relative;
   float: left;
@@ -245,7 +256,7 @@ form .form-group {
 
 .panel-body{
   background-color: #f5f5f5b6;
-  box-shadow: 10px 10px 40px 0.1px rgba(0, 0, 0, 0.664);
+  box-shadow: 0px 20px 40px 0.1px rgb(0 0 0 / 75%);
 }
 
 /* ========================================================================
