--- a/templates/settigns.html
+++ b/templates/settigns.html
@@ -7,7 +7,7 @@
     <link href={{ url_for('static', filename='css/settingsS.css') }} rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Change Password</title>
 </head>
 <body>
     <form method="POST">
