--- a/templates/SDashboard.html
+++ b/templates/SDashboard.html
@@ -15,7 +15,7 @@
     <form method="POST">
         <header class = "Header1">
             <h1 class="h1"><strong>&nbsp;&nbsp;TERRA<p class="subttl">&nbsp;Student Request Management System</p></strong></h1>
-            <div class="pull-right username" id = "username"><div class="uicon"></div>{{username}}</div>
+            <div class="pull-right username" id = "username"><div class="uicon"></div>{{user_name}}</div>
         </header>
         <ul class="navSettings">
             <div class="kebabSettings">
