--- a/templates/LSubmissionForm.html
+++ b/templates/LSubmissionForm.html
@@ -29,7 +29,7 @@
               type="text"
               id="fname"
               name="firstname"
-              value={{studentName}}
+              value="{{studentName}}""
             />
           </div>
           <div class="col-25">
@@ -53,7 +53,7 @@
               type="text"
               id="fname"
               name="firstname"
-              value={{username}}
+              value="{{username}}"
             />
           </div>
         </div>
