--- a/templates/NewSubmissionForm.html
+++ b/templates/NewSubmissionForm.html
@@ -145,10 +145,11 @@
               </div>
               <div class="col-75">
                 <input
+                  readonly
                   type="text"
                   id="fname"
                   name="studentName"
-                  placeholder="Enter your name"
+                  value="{{username}}"
                 />
               </div>
               <div class="col-25">
