--- a/templates/settigns.html
+++ b/templates/settigns.html
@@ -18,7 +18,7 @@
                 <div class="setrow">
                     <label class="lab"><strong>Username</strong></label>
                     <div>
-                        <input type="text" readonly class="box1 fixed1" id="username2" value={{username}}>
+                        <input type="text" readonly class="box1 fixed1" id="username2" value="{{user_name}}">
                     </div>
                 </div>
                 <div class="setrow">
